update file openapi and implemented endpoint's
